--- a/doc/main.tex
+++ b/doc/main.tex
@@ -225,7 +225,7 @@ RandomForestClassifier is made up of decision trees. These trees split the featu
 
 
 \subsubsection{KNeighborsClassifier}
-In the scikit-learn library KNeighborsClassifier is an implementation of the k-nearest neighbors classification algorithm(kNN)\cite{KNN}. The kNN uses as it names tells the k nearest neighbors for calculation. This is done by instance-based learning and results in non-generalizing learning. Instance-based learning and non-generalizing learning means that during fitting no complete model is made but only the given feature set is stored in order of appearing. The target predicting is done by going through the inputted feature set to find the nearest k points for each instance, depending on the majority class of the k neighbors the classification is vote is decided. The default metric for distance measuring is Euclidean distance(absolute distance) another option is the Manhattan distance. The Manhattan distance is the sum of all differences in features between two instances, this is quicker than calculating the Euclidean distance but less accurate. A ball tree, a kd-tree or a brute search is used find the k nearest neighbor. These can heavily influence the search time, depending on the number of instances and number of features. These methods can influence the prediction time heavily but should not influence predictive accuracy. The previously mentioned k parameter is an influencer for prediction quality.\cite{KNN-k}
+In the scikit-learn library KNeighborsClassifier is an implementation of the k-nearest neighbors classification algorithm(kNN)\cite{KNN}. The kNN uses as it names tells the k nearest neighbors for calculation. This is done by instance-based learning and results in non-generalizing learning. Instance-based learning and non-generalizing learning means that during fitting no complete model is made but only the given feature set is stored in order of appearing. The target predicting is done by going through the inputted feature set to find the nearest k points for each instance, depending on the majority of the k neighbors classes the classification is decided. The default metric for distance measuring is Euclidean distance(absolute distance) another option is the Manhattan distance. The Manhattan distance is the sum of all differences in features between two instances, this is quicker than calculating the Euclidean distance but less accurate. A ball tree, a kd-tree or a brute search is used find the k nearest neighbor. These can heavily influence the search time, depending on the number of instances and number of features. These methods can influence the prediction time heavily but should not influence predictive accuracy. The previously mentioned k parameter is an influencer for prediction quality.\cite{KNN-k}
 
 \subsubsection{SGDClassifier}
 SGDClassifier is an incremental function to stochastically approximate the gradient descent of a loss or cost function \cite{SGDClass}. The default classifier to optimize is a linear SVM on its loss function. The classifier expects continuous features with a mean of zero and sparse setting. This makes the classifier sensitive to categorical data, as it performs optimally with continuous features. The iterative steps for calculation gradient descent are bounded by the inverse of the learning rate and a threshold value. The threshold value indicates what degree of slope indicates a near minimal or maximal. The learning rate is used to update the model in each iteration. The fitted functions are linear, if the input has multiple target classes a classifier predicts one class versus all other classes. 
@@ -234,10 +234,10 @@ SGDClassifier is an incremental function to stochastically approximate the gradi
 AdaBoostingClassifier (AdaBoost) is an ensemble classifier that fits other classifiers and outputs the weighted results of those classifiers \cite{AdaBoost}. AdaBoost trains these other classifiers on previously misclassified results by increasing their influence this makes it heavily subjected to noisy data and outliers. The scikit-learn library uses the multi class AdaBoost-SAMME implementation from J. Zhu et al \cite{MadaB}. The solution of J. Zhu solves the lack of multi-class solution of the weak learners (other classifiers) by extending the initial AdaBoost classifier with a forward stage wise additive step. In this step a continual calculation of a loss function will output the prediction and in a two class case it reduces to the initial solution.
 
 \subsubsection{SVC-rbf}
-SVC-rbf is a support vector classifier(SVC) implementation with a radial basis function. The radial basis function(rbf) is used to handle a large feature dimension. The standard support vector machine splits for each feature pair, doing this for a large feature space computation grows outside a feasible duration for classification \cite{SVN}. The feasible duration doing a run of fitting and predicting in a day or two. This fit time is quadratic with the number of samples based on the implementation of libsvm\cite{SVM}. The fitting of a SVC will assign each example to one of two categories and will map them in a new dimension space. This mapping is to make a clear separation between the two categories. However, with the radial basis function this is done with the distant from the points indicated by a separation area in a multi feature space. Classifying a point is finding in which class area this point falls. The multi class problem is solved by  all combinations of classes pairs and the class with the most votes is picked \cite{Multi-pair-coup}. To optimize the decision surface there are two main parameters C and gamma. The parameter C trades off misclassification of training examples against simplicity of the decision surface, a low C indicates a simple decision surface and lenient misclassification. The gamma parameter is a measure of influence for a single training example. The larger gamma is, the less influence a single instances has.
+SVC-rbf is a support vector classifier(SVC) implementation with a radial basis function. The radial basis function(rbf) is used to handle a large feature dimension. The standard support vector machine splits for each feature pair, doing this for a large feature space the computation grows outside a feasible duration for classification \cite{SVN}. The feasible duration doing a run of fitting and predicting in a day or two. This fit time is quadratic with the number of samples based on the implementation of libsvm\cite{SVM}. The fitting of a SVC will assign each example to one of two categories and will map them in a new dimension space. This mapping is to make a clear separation between the two categories. However, with the radial basis function this is done with the distant from the points indicated by a separation area in a multi feature space. Classifying a point is finding in which class area this point falls. The multi class problem is solved by  all combinations of classes pairs and the class with the most votes is picked \cite{Multi-pair-coup}. To optimize the decision surface there are two main parameters C and gamma. The parameter C trades off misclassification of training examples against simplicity of the decision surface, a low C indicates a simple decision surface and lenient misclassification. The gamma parameter is a measure of influence for a single training example. The larger gamma is, the less influence a single instances has.
 
 \subsubsection{GaussianNB}
-GaussianNB is a Naïve Bayes classifier implementation with the  assumption that the feature set is Gaussian distributed \cite{Bayes}. Fitting the data, a partial fit function is used based on the work of Chan, Golub and LeVeque \cite{Sam-var}. This calculates the assumed means and variances of a Gaussian distribution of the inputted feature set. Based on this distribution the prediction is made by filling in the maximum likelihood. The limited calculation needed for classification and prediction makes this one of the fastest classifiers. The only parameter of this classifier specifies the prior probabilities of the classes. This means that no adjustment to the given input is made on importances for classification. which will when specified not be adjusted to the given input. 
+GaussianNB is a Naïve Bayes classifier implementation with the  assumption that the feature set is Gaussian distributed \cite{Bayes}. Fitting the data, a partial fit function is used based on the work of Chan, Golub and LeVeque \cite{Sam-var}. This calculates the assumed means and variances of a Gaussian distribution of the inputted feature set. Based on this distribution the prediction is made by filling in the maximum likelihood. The limited calculation needed for fitting and prediction makes this one of the fastest classifiers. The only parameter of this classifier specifies the prior probabilities of the classes. This means that no adjustment to the given input is made on importances for classification. which will when specified not be adjusted to the given input. 
 
 \subsubsection{BernoulliNB}
 BernoulliNB is a Naïve Bayes classifier implementation assuming a Bernoulli distribution with Boolean like values \cite{NB-text}. The first step of this implementation is checking if the features are binary-valued, if any other data is found this input will be binarized. This binarization is done by binning numerical values in ranges of their value or splitting categorical values into separate classes for each class their own. This binarization can be disabled or reduced by a threshold on the input. Based on this Boolean model a smoothed version of the maximum likelihood is used for prediction. This classifier is mostly used in document classification as it can binary store occurrence useful for prediction class probability.
@@ -269,7 +269,7 @@ In this section definitions and abbreviations are explained and set in context. 
 	
 	class	 & categorical features consist of at least 2 classes\\ [1ex]
 	
-	cross validation & is a method to measure accuracy. This is done by splitting the data in k folds. In each fold 1/k of the dataset is tested and the rest is used for classification. The value 10 is chosen for k as this is on average a well working number\cite{Cross}. \\ [1ex]
+	cross validation & is a method to measure accuracy. This is done by splitting the data in k folds. In each fold 1/k of the dataset is tested and the rest is used for fitting. The value 10 is chosen for k as this is on average a well working number\cite{Cross}. \\ [1ex]
 	
 	datapoint & a datapoint is a single value of a feature. For example a single instance has for all features a single datapoint.\\[1ex]
 	
@@ -289,7 +289,7 @@ In this section definitions and abbreviations are explained and set in context. 
 	
 	Github & an online platfrom to host data. It uses git commands and is mostly used with programming project to organize a common project wich each member can locally alter and centralize share updates or modifications. \\ [1ex]	
 	
-	machine learning & An algorithm that will will learn something and may adopt to the input to better fit the learned instance. To goal of learning can be mostly to predict a Target value, this can be part of an initial input. Multiple flavors of machine learners exists, for example for regression, classification, clustering.\\ [1ex]	
+	machine learning & An algorithm that will will learn something and may adopt to the input to better fit the learned instance. To goal of learning can be mostly to predict a Target value, this can be part of an initial input. Multiple flavors of machine learners exists, for example regression, classification, clustering.\\ [1ex]	
 	
 	numerical & exact values, more uniquely than a category. For example a temperature value or time value. Such a value can be subtracted or divided \\ [1ex]	
 \end{tabular}
@@ -364,7 +364,7 @@ Experiment data is saved to in what the results are. Depending on the experiment
 	\item control data like predictions and real target values. Summarizing data of the predictions to make a faster observation. 
 \end{itemize}
 \subsubsection{Duration}
-The duration for each classification instance and for each prediction the time is added to indicate how long the total cross validation took. 
+The duration for fitting training instances and for each prediction the time is added to indicate how long the total cross validation took. 
 
 \subsubsection{Predictions}\label{pred}
 The predictions of the outputted target value are saved. Individual files are chosen for each case of predictions. The true value for the prediction is also saved as reference and option for recalculation. 
@@ -564,7 +564,7 @@ Due to the robustness experiments a lot of results change the composition of a d
 
 
 \paragraph{Added features}
-In figure \ref{fig:ScalableAdded} the durations of adding redundant duplicate or random features are shown. In figures \ref{fig:ScalableAdded2} the durations of adding duplicate or random features are shown In figures \ref{fig:SADRC}, ,\ref{fig:SADRC2} the classification times are shown for a growing feature size, these durations are a great part of most classifiers. In figures \ref{fig:SADRP}, \ref{fig:SADRP2} the prediction time is shown, here most classifier take only a short while. The combined time can be seen in figures \ref{fig:SADR}, \ref{fig:SADR2} which shows the total difference.
+In figure \ref{fig:ScalableAdded} the durations of adding redundant duplicate or random features are shown. In figures \ref{fig:ScalableAdded2} the durations of adding duplicate or random features are shown In figures \ref{fig:SADRC}, ,\ref{fig:SADRC2} the fitting times are shown for a growing feature size, these durations are a great part of most classifiers. In figures \ref{fig:SADRP}, \ref{fig:SADRP2} the prediction time is shown, here most classifier take only a short while. The combined time can be seen in figures \ref{fig:SADR}, \ref{fig:SADR2} which shows the total difference.
 The averaged size of this dataset is 3797 instances and 200 features. he slope of these added figures is seen in figure \ref{fig:SADS}.
 \begin{figure}[H]
 	\centering	
@@ -591,7 +591,7 @@ The averaged size of this dataset is 3797 instances and 200 features. he slope o
 	\centering	
 	\begin{subfigure}[b]{0.45\textwidth}
 		\includegraphics[width=\textwidth]{images/appendix/FeatAddDupRandPredClass.png}
-		\caption{only the time needed to predict }
+		\caption{only the time needed to fit }
 		\label{fig:SADRC2}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.45\textwidth}
@@ -620,21 +620,21 @@ The averaged size of this dataset is 3797 instances and 200 features. he slope o
 
 
 
-\textbf{RandomForestClassifier} The duration of the RandomForestClassifier is fairly below average in comparison. The difference between random and redundant duplicate is noticeable as the random feature take more time mostly for classification as classification takes the longest of the two. This longer duration can be attributed to the at. As seen in section\ref{chapter312} the features are given some importance which will take some time. There is also hardly any difference between the redundant or normal duplicate features.  \\
+\textbf{RandomForestClassifier} The duration of the RandomForestClassifier is fairly below average in comparison. The difference between random and redundant duplicate is noticeable as the random feature take more time mostly for fitting as fitting takes the longest of the two. This longer duration can be attributed to the variation and remaining importance. As seen in section\ref{chapter312} the features are given some importance which will take some time. There is also hardly any difference between the redundant or normal duplicate features.  \\
 
-\textbf{KNeighborsClassifier} The duration of KNeighborsClassifier is average in comparison. Most of the time is needed for prediction as there is only minimal effort during classification. The difference in prediction time between the three variants is surprisingly large. The smallest prediction duration is for the duplicate features which seems obvious considering they are most similar to the features in the training set. The redundant duplicate features take longer than the random which can be explained as slightly more variation between the features. On average the std of a random numerical feature is 0.28, the std of a numerical redundant features is higher on average in for each dataset. A difference between 1NN and kNN is also only minimal as the largest part of the prediction is making for example a kd-tree and the search on such a data structure is far smaller than the making of.\\
+\textbf{KNeighborsClassifier} The duration of KNeighborsClassifier is average in comparison to the other classifiers. Most of the time is needed for prediction as there is only minimal effort during fitting. The difference in prediction time between the three variants is surprisingly large. The smallest prediction duration is for the duplicate features which seems obvious considering they are most similar to the features in the training set. The redundant duplicate features take longer than the random which can be explained as slightly more variation between the features. On average the std of a random numerical feature is 0.28, the std of a numerical redundant features is higher on average in for each dataset. A difference between 1NN and kNN is also only minimal as the largest part of the prediction is making for example a kd-tree and the search on such a data structure is far smaller than the making of.\\
 
 \textbf{SGDClassifier} SGDClassifier has one of the shortest durations of the machine learning process. The prediction is even the smallest. There is also hardly any difference between the input of features. The random features have take only  a slightly longer than any sort of duplicate feature. The short prediction time is due to only filling in made linear regressions lines based on the inputted features. \\
 
-\textbf{AdaBoost} AdaBoost has one of the longest classification times with default 5 times more estimators it is bound to take some more time as RandomForestClassifier. The impact of random features compared to any sort of duplicate features is large with a steady increase in duration. This is mostly due to the variation in the added features and the more effort the Decision Trees need to filter out any information. The effect of the adaptive boost is unnoticeable between random or duplicate features compared to the standard RandomForestClassifier.  \\
+\textbf{AdaBoost} AdaBoost has one of the longest fitting times with default 5 times more estimators it is bound to take some more time as RandomForestClassifier. The impact of random features compared to any sort of duplicate features is large with a steady increase in duration. This is mostly due to the variation in the added features and the more effort the Decision Trees need to filter out any information. The effect of the adaptive boost is unnoticeable between random or duplicate features compared to the standard RandomForestClassifier.  \\
 
-\textbf{SVC-rbf} SVC-rbf has one of the slowest classification and prediction times. With the calculation of the decision surface taking the most time. The duration of prediction is also slow in comparison to the other classifiers. The impact of the random features is noticeable with the variation present in those features SVC takes a bit longer to  classify and predict. \\
+\textbf{SVC-rbf} SVC-rbf has one of the slowest fitting and prediction times. With the calculation of the decision surface taking the most time. The duration of prediction is also slow in comparison to the other classifiers. The impact of the random features is noticeable with the variation present in those features SVC takes a bit longer to  classify and predict. \\
 
-\textbf{GaussianNB} GaussianNB has one of the quickest prediction and classification time. The calculation needed for the mean and the variance is easy and there seems no significant impact of the different added features. That is reasonable as it should have little impact on the calculation of the mean and variance of a single feature.\\
+\textbf{GaussianNB} GaussianNB has one of the quickest prediction and fitting time. The calculation needed for the mean and the variance is easy and there seems no significant impact of the different added features. That is reasonable as it should have little impact on the calculation of the mean and variance of a single feature.\\
 
-\textbf{BernoulliNB} BernoulliNB is also one of the quickest in prediction and classification time. With a similar approach as BernoulliNB there is little calculation in both prediction and classification. The only added calculation for BernoulliNB is a binarization. \\
+\textbf{BernoulliNB} BernoulliNB is also one of the quickest in prediction and fitting time. With a similar approach as BernoulliNB there is little calculation in both prediction and fitting. The only added calculation for BernoulliNB is a binarization. \\
 
-\textbf{GradientBoostingClassifier} The GradientBoostingClassifier needs the most time of all classifiers for classification and prediction. With 10 times the estimators of RandomForestClassifier it takes on average 250 times the total duration. With the calculation in multiple stages the duration time ramps up to fit the Decision trees. The impact of random features is more than either of the duplicate features. This is also due to more variation in the features with also using DecisionTrees, GradientBoostingClassifier %TODO
+\textbf{GradientBoostingClassifier} The GradientBoostingClassifier needs the most time of all classifiers for fitting and prediction. The classifier uses 10 times more estimators than RandomForestClassifier and it takes on average 250 times the total duration. With the calculation in multiple stages the time needed to fit the Decision trees multiple times explodes. The impact of random features is more than either of the duplicate features. This increase in fitting time is mostly due to more variation in the features, similar to RandomForestClassifier. 
   \\
 
 %The slopes of the different classifiers are close to a linear scale and vary a bit between addition(figure \ref{fig:SADS}). This is mostly an the starting impact of the added features compared to the clean dataset. 
@@ -659,7 +659,7 @@ In figure \ref{fig:FeatRem} the duration against features removed from a dataset
 		\label{fig:FeatCorImp}
 	\end{subfigure}
 	
-	\caption{Duration of classification and prediction of the classifiers against removing features from clean datasets.}
+	\caption{Duration of fitting and prediction of the classifiers against removing features from clean datasets.}
 	\label{fig:FeatRem}
 \end{figure}
 
@@ -671,7 +671,7 @@ In figure \ref{fig:FeatRem} the duration against features removed from a dataset
 
 \textbf{AdaBoost} AdaBoost classifier needs more time for least important removed feature dataset than randomly removed features. This seems similar to the RandomForestClassifier. With the important features left AdaBoost has a harder time to classify outliers which the removed features were more likely to be used for. \\
 
-\textbf{SVC-rbf} The SVC-rbf classifier needs more time for important feature in line with most other classifier, this means that with the less important feature removed, more time is needed for the decision surface calculation. This is also in line with the similarity of duration between the feature importance and correlation features being removed duration. With less correlated features being important features the odds are higher of a less linear relation between the targets.%TODO
+\textbf{SVC-rbf} The SVC-rbf classifier needs more time for least feature importance removed datasets and most correlated feature removed datasets then time needed for the dataset with randomly removed features.  This means that the randomly removed features need less time for the decision surface fitting. The remaining dataset of the least correlated and most important features needs more time for the decision surface as these features have more variation.  .
  \\
 
 \textbf{GaussianNB} Removing the least important features from a dataset has less of an impact of decreasing the duration than removing random features. The effect of calculating means and variances should not have this effect as that calculation is more dependent on instances than values. The only reason can be the calculation of the maximum likelihood needing slightly more workload. The Difference between feature importance and correlation feature removing is negligible \\
@@ -725,7 +725,7 @@ In this sections datasets are split reduced in the instance dimension. First the
 
 Comparing the lines visible in figure \ref{fig:Instances} with the actually slope in figure \ref{fig:InstancesPredSlope} the classifiers GradientBoostingClassifier, RandomForestClassifier, AdaBoost, SGDClassifier, BernoulliNB and GaussianNB have a near linear ascension. Expect for the bump in duration around 50 $\%$ is the duration increase stable for these classifiers. This is also expected from classifier depending on standard calculations of mean, variance, linear fit and decision trees. Those calculation are linear in the number of instances. For the remaining classifiers SVC-rbf and the kNN variants the algorithms show a non linear trend. For the kNN classifier this is due to the prediction using a kdTree or ball tree which needs longer linear time for construction and searching. For SVC-rbf the implementation estimates a quadratic time complexity for the number of samples. 
 
-The averaged result can be easily captured with a linear fit with taking the log of the duration and instances. In figure \ref{fig:Instances} the predictions lines for most classifiers, line up with the actually results. Together with the slope seen in figure \ref{fig:InstancesPredSlope} this seems reasonable. However this is the average result on around 80 datasets. Can we actually predict for a single dataset the duration it takes for classification and predicting. The result is shown in figure \ref{fig:InstancesPred} as the dotted line, that line clearly does not line up with the averaged result. Visible in the appendix in chapter \ref{InstancesApp} the duration lines per datasets are less linear than the averaged result. The prediction is made by adding some additional information to a Kernel Ridge regression algorithm namely the number of categorical, numerical and total features, the number of instances and the number of classes in the target feature. These are chosen based on the configuration of the chosen classifiers and early results of duration experiments. 
+The averaged result can be easily captured with a linear fit with taking the log of the duration and instances. In figure \ref{fig:Instances} the predictions lines for most classifiers, line up with the actually results. Together with the slope seen in figure \ref{fig:InstancesPredSlope} this seems reasonable. However this is the average result on around 80 datasets. Can we actually predict for a single dataset the duration it takes for fitting and predicting. The result is shown in figure \ref{fig:InstancesPred} as the dotted line, that line clearly does not line up with the averaged result. Visible in the appendix in chapter \ref{InstancesApp} the duration lines per datasets are less linear than the averaged result. The prediction is made by adding some additional information to a Kernel Ridge regression algorithm namely the number of categorical, numerical and total features, the number of instances and the number of classes in the target feature. These are chosen based on the configuration of the chosen classifiers and early results of duration experiments. 
 
 \begin{figure}[H]
 	\centering	
@@ -831,7 +831,7 @@ We consider here random, duplicate and redundant duplicate features as they are 
 
 \textbf{SVC-rbf} The robustness of SVC-rbf against duplicate features is similar to most classifiers. The lack of robustness against categorical datasets is mostly with the impact of these features. SVC-rbf builds on all features the decision surface and with these features being irrelevant the SVC has a harder time to correctly classify. Similar behavior can be seen with the introduction of categorical random features. There are not misleading like redundant duplicate features but with the variation of 100 classes the SVC will fail to make a good decision surface without tuning of the C parameter to simplify the decision surface. There is more robustness for SVC with numerical random features. Handling of numerical redundant duplicate features is also not the strong suit of SVC but with a low accuracy the SVC is already under fitted on the data.  \\
 
-\textbf{GaussianNB} GaussianNB is one of the only once to lose some accuracy with duplicate categorical features. With the added features the likelihood function has a decreased performance. The dependence on all the feature is also visible with the redundant feature addition for both categorical and numerical datasets the performance drops significantly with the introduction. The classifier depends on all features to fall in the distribution with a mean and variance and the added features fall outside these values and accuracy drops. For random categorical features the GaussianNB is even the most robust with an increase in accuracy with the introduction. For numerical the accuracy stays the same. This is by virtue of the random features having a clear structure of uniform randomness which the classifiers gives no importance to in classification accuracy.   \\
+\textbf{GaussianNB} GaussianNB is one of the only once to lose some accuracy with duplicate categorical features. With the added features the likelihood function has a decreased performance. The dependence on all the feature is also visible with the redundant feature addition for both categorical and numerical datasets the performance drops significantly with the introduction. The classifier depends on all features to fall in the distribution with a mean and variance and the added features fall outside these values and accuracy drops. For random categorical features the GaussianNB is even the most robust with an increase in accuracy with the introduction. For numerical the accuracy stays the same. This is by virtue of the random features having a clear structure of uniform randomness which the classifiers gives no importance to during fitting.   \\
 
 \textbf{BernoulliNB} Similar to GaussianNB does BernoulliNB lose accuracy with introduction of duplicate features. As a trait of a Naïve Bayes classifier all features are given some importance and these duplicate feature have equal performance as the original features. As this is mostly categorical datasets  the binarization of these feature decreases the accuracy. The redundant duplicate feature addition to the dataset decreases the accuracy only slightly as seen with the introduction of duplicates the accuracy can decrease with more irrelevant features. The decrease of accuracy of the BernoulliNB is the lowest which indicates that the classifier has hardly classified correctly because of under fitting. The result is that the accuracy drops only because it depends on all features useful for prediction calculated during fitting. The addition of random feature has a similar effect as on GaussianNB namely no effect. \\
 
@@ -984,7 +984,7 @@ More options exist to save more data of the executed experiments. The first miss
 For the duration pictures some results are removed as they do not fall in line with the other results at all. By using the standard of the clean dataset which is calculated with each run we throw out any results changing more than 5$\%$ from another average. One of the reason for these differences in duration is because of multiple used processing systems and other processes running during computation. These other process or the experiments themselves maxed out the cpu or memory of the systems and so interrupting the experiments.
 
 \subsubsection{Bias Variance}
-The datasets used by Joaquin in \cite{Bias-var} were UCI datasets, some of these are also published on OpenML under the dataset ids (1369-1377). These are artificially created to have datasets with a large number of instances.%TODO 
+The datasets used by Joaquin in \cite{Bias-var} were UCI datasets, some of these are also published on OpenML under the dataset ids (1369-1377). These are artificially created to have a large number of instances. The time needed for fitting and %TODO 
 
 
 \subsubsection{different approach}
@@ -1005,11 +1005,11 @@ The result will be a ranking of classifiers on different scales shown in figure 
 	\label{fig:table}
 \end{figure}
 
-The impact of features on runtime for most classifiers is near linear with for all but kNN an increase with random features. The impact of features for kNN is depended on the values used for fitting and the values for predicting. In the case these values differ largely the duration is longer in comparison. The other classifiers have more problems with the variation in random features gives an increase in classification duration as that is the learning way of those classifiers. 
+The impact of features on runtime for most classifiers is near linear with for all but kNN an increase with random features. The impact of features for kNN is depended on the values used for fitting and the values for predicting. In the case these values differ largely the duration is longer in comparison. The other classifiers have more problems with the variation in random features gives an increase in fitting duration as that is the learning way of those classifiers. 
 
-The impact of instances on runtime for most classifiers is near linear except for kNN and SVC-rbf. With a calculation based on multiple runs over the input set do kNN and SVC-rbf need more than linear time for prediction and classification. The other classifiers might have linear increase in duration but the differences are exceedingly large between classifiers.
+The impact of instances on runtime for most classifiers is near linear except for kNN and SVC-rbf. With a calculation based on multiple runs over the input set do kNN and SVC-rbf need more than linear time for prediction and fitting. The other classifiers might have linear increase in duration but the differences are exceedingly large between classifiers.
 
-The end results of durations indicate that the Naive Bayes classifiers and SGDClassifier are the quickest in classification with a runner up of the RandomForestClassifier. The KNeighborsClassifier and AdaBoost are behind RandomForestclassifier in average lowest duration. However the factor between RandomForestClassifier and AdaBoost is already around 10 times slower. The remaining two classifiers GradientBoostingClassifier and SVC-rbf are the slowest of them all with GradientBoostingClassifier taking around 200 times longer than RandomForestClassifier for the duration experiments. 
+The end results of durations indicate that the Naive Bayes classifiers and SGDClassifier are the quickest in fitting with a runner up of the RandomForestClassifier. The KNeighborsClassifier and AdaBoost are behind RandomForestclassifier in average lowest duration. However the factor between RandomForestClassifier and AdaBoost is already around 10 times slower. The remaining two classifiers GradientBoostingClassifier and SVC-rbf are the slowest of them all with GradientBoostingClassifier taking around 200 times longer than RandomForestClassifier for the duration experiments. 
 
 The impact of irrelevant features or redundant features for predictive accuracy is highly depended on the type of features. Straight duplicate features are not really a concern for most classifiers except SGDClassifier. This classifiers takes all features into account and can so gain or lose accuracy depending on the duplicate feature. Redundant duplicate features has a bad impact on all classifiers as they are not identified as redundant internally. The classifier most depended on all features like RandomForestClassifier or GaussianNB are most impact by these features. Lastly random features has the most flavors of impact of all of them. The Naive bayes classifiers, GaussianNB and BernoulliNB gain little or lose little accuracy. kNN classifiers is the worst off with a deep impact with both types of random features. Classifiers with a bit better results than kNN are SVC-rbf and SGDClassifier who lose a lot of accuracy from categorical random features but lose little from numerical random features. The remaining classifiers RandomForestClassifier, AdaBoost and GradientBoostingClassifier lose only some accuracy based on the total number.
 
@@ -1035,7 +1035,7 @@ Adding more experimental runs to most of the experiments can give way to more br
 
 A source of attention can be the use of only datasets that are available on OpenML are being used for this research. OpenML has a certain community and the datasets available on OpenML may not translate to other areas of interest. Another party to consider then is a platform like Kaggle which share a lot of datasets already but the commercial side to Kaggle may be more of a counterpart to the research nature of OpenML. 
 
-A partly solution for the previous mentioned problem of datasets is the splitting of datasets in certain categories. In this thesis there was for some cases a split for categorical and numerical features possible by the classification in OpenML of all inputted features. Different splitting of dataset can be done in categories like sparse/dense or cleaned and uncleaned. Further distinguishing in categorical and numerical features the different values of discrete, continuous or ordinal values. Each can need different preprocessing steps for different classifiers. 
+A partly solution for the previous mentioned problem of datasets, is the splitting of datasets in certain categories. In this thesis there was for some cases a split for categorical and numerical features possible by the classification in OpenML of all inputted features. Different splitting of dataset can be done in categories like sparse/dense or cleaned and uncleaned. Further distinguishing in categorical and numerical features the different values of discrete, continuous or ordinal values. Each can need different preprocessing steps for different classifiers. 
 
 
 
